@@ -102,13 +102,7 @@ class LaTeXBuilder(Builder):
             doctree.settings.title = title
             doctree.settings.docname = docname
             doctree.settings.docclass = docclass
-            try:
-                docwriter.write(doctree, destination)
-            except UnicodeError:
-                self.warn("a Unicode error occurred when writing the output. "
-                          "Please make sure all config values that contain "
-                          "non-ASCII content are Unicode strings.")
-                return
+            docwriter.write(doctree, destination)
             self.info("done")
 
     def assemble_doctree(self, indexfile, toctree_only, appendices):
